<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/bg_image2"
    android:orientation="vertical"
    tools:context=".Signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/signup_name"
                style="@style/common_edittext1"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:autofillHints="name"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="@dimen/_7sdp" />

            <EditText
                android:id="@+id/signup_email"
                style="@style/common_edittext1"

                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/ic_email_blue"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_7sdp" />
            <EditText
                android:id="@+id/signup_password"
                style="@style/common_edittext1"
                android:drawableEnd="@drawable/ic_password"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="@dimen/_7sdp"
                android:drawablePadding="@dimen/_7sdp"
                android:autofillHints="password"/>

            <EditText
                android:id="@+id/signup_cpassword"
                style="@style/common_edittext1"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_password"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/cpass"
                android:inputType="textVisiblePassword"
                android:padding="@dimen/_7sdp" />

            <EditText
                android:id="@+id/signup_connumber"
                style="@style/common_edittext1"
                android:drawableEnd="@drawable/ic_phone_call_icon"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/con"
                android:inputType="number"
                android:padding="@dimen/_7sdp"
                android:drawablePadding="@dimen/_7sdp"
                android:autofillHints="phone"/>

            <EditText
                android:id="@+id/signup_DOB"
                style="@style/common_edittext1"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_calendar"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/Dob"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_7sdp"
                android:autofillHints="20/11/2002" />

            <RadioGroup
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:id="@+id/signup_Gender"
                android:orientation="horizontal"
                android:padding="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <RadioButton
                    android:id="@+id/signup_RB_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:text="@string/male"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/signup_RB_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:layout_marginStart="-9dp"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:id="@+id/signup_RB_3"
                    android:textSize="@dimen/_15sdp"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/white"
                    android:text="@string/others"
                    android:buttonTint="@color/white" />

            </RadioGroup>
            <LinearLayout
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_7sdp"
                    style="@style/common_edittext1"
                    android:id="@+id/signup_city"
                    android:layout_weight="2"
                    android:text="@string/city"
                    android:background="@drawable/custom_border"/>
                <Spinner
                    android:id="@+id/signup_sp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTintMode="screen"
                    android:backgroundTint="#0FCBE8"
                    android:layout_weight="1.5"/>
            </LinearLayout>
            <Button
                android:id="@+id/signup_btn"
                style="@style/common_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_45sdp"
                android:padding="@dimen/_7sdp"
                android:text="@string/sign_up"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>