<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/bg_image2"
    tools:context=".MainActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_text"
                android:layout_width="@dimen/_400sdp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:fontFamily="cursive"
                android:text="@string/welcome"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email"
                style="@style/common_edittext"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/login_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:autofillHints="emailAddress"
                android:drawableEnd="@drawable/ic_email_blue"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_7sdp" />

            <EditText
                android:id="@+id/login_password"
                style="@style/common_edittext"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/login_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_17sdp"
                android:autofillHints="password"
                android:drawableEnd="@drawable/ic_password"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="@dimen/_7sdp" />

            <Button
                android:id="@+id/login_btn"
                style="@style/common_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:padding="@dimen/_7sdp"
                android:text="@string/Btn" />

            <TextView
                android:id="@+id/login_reg"
                style="@style/common_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_7sdp"
                android:text="@string/register"
                android:textSize="@dimen/_10sdp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>